--- a/serverless.yml
+++ b/serverless.yml
@@ -3,7 +3,7 @@ service: eventHandlerSlack
 provider:
     name: aws
     stage: prod
-    runtime: nodejs8.10
+    runtime: nodejs10.x
     region: us-east-1
     timeout: 3
     memorySize: 256
